# shooter-evolved

./: GameOutline.md  JoltIntegration.md  build.bat
project/: .gitignore  CLAUDE.md  CMakeLists.txt  CodeStandard.md  NetworkingGuidelines.md  REFACTORING_PLAN.md  allow_firewall.bat  build.bat  build.sh  main.cpp  package.bat  test.bat  vcpkg.json
project/.claude/: settings.local.json
project/.claude/skills/build-game/: SKILL.md
project/.claude/skills/network-programmer/: SKILL.md
project/.claude/skills/test-game/: SKILL.md
project/assets/models/: BasicGun.glb  BasicPistol.glb  BasicShotgun.glb
project/notes/: LinuxBuildSetup.md  Shooting.md  Todo.md
project/shaders/: basic.frag  basic.vert
project/src/: TestClass.h
project/src/actor/: Actor.cpp  Actor.h  OscillatingActor.cpp  OscillatingActor.h  SpawnPoint.cpp  SpawnPoint.h
project/src/actor/components/: MeshRenderer.cpp  MeshRenderer.h  PhysicsBody.cpp  PhysicsBody.h
project/src/core/: Args.cpp  Args.h  Game.cpp  Game.h  GameConfig.h  GameState.h  MatchSettings.h  Paths.cpp  Paths.h  Window.cpp  Window.h
project/src/input/: GamepadInput.cpp  GamepadInput.h  InputFrameLocal.cpp
project/src/net/: ActorState.cpp  ActorState.h  BitStream.cpp  BitStream.h  Client.cpp  Client.h  Endpoint.cpp  Endpoint.h  FireIntent.cpp  FireIntent.h  GnsTransport.cpp  GnsTransport.h  HitscanMath.h  InputFrame.cpp  InputFrame.h  LobbyRoster.cpp  LobbyRoster.h  MockTransport.cpp  MockTransport.h  MsgType.h  NameGenerator.cpp  NameGenerator.h  Net.cpp  Net.h  NetRole.h  NetworkId.h  PlayerState.cpp  PlayerState.h  Server.cpp  Server.h  Snapshot.cpp  Snapshot.h  SpawnSelector.cpp  SpawnSelector.h  Transport.h  WeaponItemState.cpp  WeaponItemState.h
project/src/physics/: CharacterController.cpp  CharacterController.h  PhysicsLayers.h  PhysicsWorld.cpp  PhysicsWorld.h
project/src/player/: CharacterController.cpp  CharacterController.h  Weapon.cpp  Weapon.h
project/src/rendering/: DebugDraw.cpp  DebugDraw.h  DecalRenderer.cpp  DecalRenderer.h  GLDebug.cpp  GLDebug.h  JoltDebugRenderer.cpp  JoltDebugRenderer.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  MuzzleFlashEffect.cpp  MuzzleFlashEffect.h  Primitives.cpp  Primitives.h  ProceduralTextures.cpp  ProceduralTextures.h  RemotePlayerRenderer.cpp  RemotePlayerRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vertex.h  ViewmodelRenderer.cpp  ViewmodelRenderer.h  WeaponModelCache.cpp  WeaponModelCache.h
project/src/scene/: Camera.cpp  Camera.h  DemoScene.cpp  DemoScene.h  Orientation.cpp  Orientation.h  Scene.cpp  Scene.h
project/src/server/: HeadlessServer.cpp  HeadlessServer.h  server_main.cpp
project/src/state/: DedicatedServerState.cpp  DedicatedServerState.h  LobbyState.cpp  LobbyState.h  MainMenuState.cpp  MainMenuState.h  PlayerStats.h  PlayingState.cpp  PlayingState.h
project/src/ui/: Hud.cpp  Hud.h  ImGuiLayer.cpp  ImGuiLayer.h  Scoreboard.cpp  Scoreboard.h
project/src/util/: CodeTimer.cpp  CodeTimer.h
project/src/weapons/: FireEdge.h  FireRate.h  HoldTap.cpp  HoldTap.h  Inventory.cpp  Inventory.h  Pellets.cpp  Pellets.h  PickupSelection.cpp  PickupSelection.h  WeaponDef.h  WeaponRegistry.cpp  WeaponRegistry.h  WeaponRuntime.h
project/tests/: CMakeLists.txt  test_args.cpp  test_basic.cpp  test_decals.cpp  test_endpoint.cpp  test_hud.cpp  test_net.cpp  test_network_id.cpp  test_orientation.cpp  test_paths.cpp  test_primitives.cpp  test_procedural_textures.cpp  test_scoreboard.cpp  test_test_class.cpp  test_weapons.cpp
project/tools/: build.py  test_build.py
